# python_zastosowania

./: README.md  pyproject.toml  results.csv
project001/: alicja_eng.txt  alicja_pl.txt  info.txt  project001.py  run.txt
project002/: magnet.txt  project002.py  run.txt
project003/: project003.py  run.txt
project004/: magnet.txt  porownanie.txt  project004.py  run.txt
project005/: expeditions.json  load_expedition.py  project005.py  run.txt
project006/: project006_chromium.py  run.txt  wp_tech_articles.json  wp_tech_articles_after_scrolling.json
project007/: project007.py
project008/: project008.ipynb  project008.py
project009/: bokeh.ipynb  project009.py  run.txt
project010/: parsed_data.json  project010.ipynb
